--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "http-server": "^0.9.0",
+    "spy": "^0.1.3",
     "watchify": "^3.7.0"
   },
   "dependencies": {
